# colorcet

./: .appveyor.yml  .buildinfo  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CNAME  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  about.html  developer_guide.html  dodo.py  genindex.html  index.html  objects.inv  pixi.toml  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: about.doctree  environment.pickle  index.doctree
.doctrees/getting_started/: index.doctree
.doctrees/user_guide/: Categorical.doctree  index.doctree
.github/workflows/: build.yaml  docs.yaml  downstream_tests.yaml  nightly_lock.yaml  test.yaml  test.yml  tests.yaml
CETperceptual_csv_0_1/: diverging-isoluminant_cjm_75_c24_n256.csv  linear_kry_5-98_c75_n256.csv  linear_kryw_5-100_c67_n256.csv  rainbow_bgyrm_35-85_c71_n256.csv
_sources/: about.rst.txt  index.ipynb.txt
_sources/getting_started/: index.rst.txt
_sources/user_guide/: index.ipynb.txt
_static/: custom.css  documentation_options.js
assets/: CET_merge.py  CET_to_py.py  README_assets.md  make_csvs_from_colorcet.m  rename_CET_maps.py
assets/CET/: circle_mgbm_67_c31_n256.csv  cyclic_bgrmb_35-70_c75_n256.csv  cyclic_bgrmb_35-70_c75_n256_s25.csv  cyclic_mybm_20-100_c48_n256.csv  cyclic_mybm_20-100_c48_n256_s25.csv  cyclic_mygbm_50-90_c46_n256.csv  cyclic_mygbm_50-90_c46_n256_s25.csv  cyclic_rygcbmr_50-90_c64_n256.csv  cyclic_wrkbw_10-90_c43_n256.csv  cyclic_ymcgy_60-90_c67_n256.csv  cyclic_ymcgy_60-90_c67_n256_s25.csv  diverging-linear-protanopic-deuteranopic_bjy_57-89_c34_n256.csv  linear-tritanopic_kcw_5-95_c22_n256.csv  linear-tritanopic_krw_5-95_c46_n256.csv  linear_bgy_10-95_c74_n256.csv  linear_bmw_5-95_c89_n256.csv  linear_bmy_10-95_c78_n256.csv  linear_kbgoy_20-95_c57_n256.csv  linear_kbgyw_10-98_c63_n256.csv  linear_kryw_5-100_c64_n256.csv  rainbow_bgyr_35-85_c73_n256.csv
assets/CETperceptual_csv_0_1/: diverging_gkr_60-10_c40_n256.csv  linear_bgyw_15-100_c67_n256.csv  linear_bgyw_15-100_c68_n256.csv  linear_kry_5-95_c72_n256.csv  linear_kryw_0-100_c71_n256.csv  linear_ternary-green_0-46_c42_n256.csv  linear_ternary-red_0-50_c52_n256.csv
assets/CETperceptual_csv_0_1_v3/: CET-C10s.csv  CET-C3s.csv  CET-C6s.csv  CET-CBL3.csv  CET-CBL4.csv  CET-D5.csv  CET-R4.csv
assets/Glasbey/: glasbey_bw_dark_n256.csv  glasbey_bw_light_n256.csv  glasbey_bw_minc_20_hue_150_280_n256.csv  glasbey_bw_minc_20_hue_330_100_n256.csv  glasbey_bw_minc_20_maxl_70_n256.csv  glasbey_bw_minc_20_minl_30_n256.csv  glasbey_bw_minc_20_n256.csv  glasbey_bw_n256.csv  glasbey_bw_no_black_n256.csv  glasbey_bw_no_gray_n256.csv  glasbey_category10_dark_n256.csv  glasbey_category10_n256.csv  glasbey_category10_no_gray_n256.csv  glasbey_category10_start_n256.csv  glasbey_category20_n256.csv  glasbey_category20_no_black_n256.csv  glasbey_category20_start_n256.csv  glasbey_category20_start_no_black_n256.csv  glasbey_category_10_start_no_black_n256.csv  glasbey_hv_n256.csv  glasbey_white_start_n256.csv  glasbey_white_start_no_black_n256.csv
cetcolors/: __init__.py
colorcet/: __init__.py  __main__.py  __version.py  _dependencies.py  plotting.py  sineramp.py  version.py
colorcet/tests/: test_aliases.py  test_bokeh.py  test_matplotlib.py
conda.recipe/: meta.yaml  readme.md  run_test.py
doc/: about.rst  colourmaptest.npy  conf.py  developer_guide.md  index.html  index.ipynb  index.rst
doc/_static/: site.css
doc/_templates/: layout.html
doc/assets/: write_named.py
doc/getting_started/: index.rst
doc/governance/project-docs/: CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  MEMBERS.md
doc/user_guide/: Categorical.ipynb  Categorical.rst  Continuous.ipynb  Continuous.rst  index.ipynb  index.rst
docs/: Homepage.ipynb  conf.py  index.html  index.ipynb  index.rst
etc/: travis-miniconda.sh
examples/: index.ipynb
examples/assets/: write_named.py
examples/getting_started/: index.ipynb
examples/user_guide/: Categorical.ipynb  Continuous.ipynb  Glasbey_Colors.ipynb  index.ipynb
getting_started/: index.html
scripts/: sync_git_tags.py
scripts/conda/: build.sh
scripts/conda/recipe/: meta.yaml
user_guide/: Categorical.html  Continuous.html  index.html
