[build-system]
requires = [
    "setuptools >=30.3.0",
    "setuptools_scm >=6",
]
build-backend = "setuptools.build_meta"

[project]
name = "colorcet"
dynamic = ["version"]
description = "Collection of perceptually uniform colormaps"
readme = "README.md"
license = { text = "CC-BY License" }
requires-python = ">=3.9"
authors = [
    { name = "James A. Bednar", email = "jbednar@anaconda.com" },
]
maintainers = [
    { name = "James A. Bednar", email = "jbednar@anaconda.com" },
]
classifiers = [
    "License :: OSI Approved",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
]
dependencies = []

[project.urls]
Homepage = "https://colorcet.holoviz.org"
Source = "http://github.com/holoviz/colorcet"
HoloViz = "https://holoviz.org/"

[project.optional-dependencies]
tests = [
    "pre-commit",
    "pytest >=2.8.5",
    "pytest-cov",
    "packaging",
]
tests_extra = [
    "colorcet[tests]",
    "pytest-mpl",  # only available on pip and conda-forge
]
examples = [
    "numpy",
    "holoviews",
    "matplotlib",
    "bokeh",
]
tests_examples = [
    "colorcet[examples]",
    "nbval",
]
doc = [
    "colorcet[examples]",
    "nbsite >=0.8.4",
    "sphinx-copybutton",
]
all = [
    "colorcet[tests]",
    "colorcet[tests_extra]",
    "colorcet[examples]",
    "colorcet[doc]",
]

[tool.setuptools]
# To exclude PNG files in colorcet/tests/baseline
include-package-data = false

[tool.setuptools.packages.find]
include = ["colorcet"]

[tool.setuptools_scm]
version_file = "colorcet/_version.py"

[tool.setuptools.package-data]
colorcet = ["py.typed"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "--color=yes"]
minversion = "7"
xfail_strict = true
log_cli_level = "INFO"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = '(?:^|/)tests/' # exclude the tests directory
strict = true
