[metadata]
name = colorcet
version = attr: param.version.get_setupcfg_version
long_description = file: README.md
long_description_type = text/markdown
license_file = LICENSE.txt
classifiers =
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Development Status :: 5 - Production/Stable
author = James A. Bednar
author_email = jbednar@anaconda.com
maintainer = James A. Bednar
maintainer_email = jbednar@anaconda.com
url = https://colorcet.pyviz.org
project_urls =
    Bug Tracker = http://github.com/pyviz/colorcet/issues
    Documentation = https://colorcet.pyviz.org
    Source Code = http://github.com/pyviz/colorcet

[options]
include_package_data = True
packages = find:
python_requires = >=2.7
install_requires =
    param >=1.7.0

[options.extras_require]
tests =
    flake8
    nbsmoke >=0.2.6
    pytest >=2.8.5

doc =
    nbsite
    sphinx_ioam_theme

examples =
    numpy
    holoviews

[wheel]
universal = 1

[tool:autover.configparser_workaround.archive_commit=$Format:%h$]
